--- a/css/app.css
+++ b/css/app.css
@@ -48,11 +48,11 @@ h2 {
 }
 
 #florida {
-    background-color: #03a9f4;
+    background-color: #03f437;
 }
 
 #paris {
-    background-color: #d32f2f;
+    background-color: #d32fa2;
 }
 
 .destination:hover h2 {
